[package]
authors = ["David Barnett <david@barnett.net.nz>"]
name = "lirename"
version = "0.1.0"
build = "build.rs"

[build-dependencies]
clap = "^2.9.0"

[dependencies]
clap = "^2.9.0"
walkdir = "^0.1.5"

[dependencies.liquery]
git = "https://github.com/lithium-player/query"
optional = false

[dependencies.liquery-file]
git = "http://github.com/lithium-player/query-file"
optional = false
